fix sonar code smells