@@ -3,7 +3,6 @@ package uk.gov.homeoffice.digital.sas.jparest.validation;
 import static java.util.stream.Collectors.groupingBy;
 
 import java.util.ArrayList;
-import java.util.List;
 import java.util.Set;
 import java.util.logging.Level;
 import java.util.logging.Logger;
@@ -45,7 +44,7 @@ public class EntityValidator {
     }
   }
 
-  private static List<StructuredError> createStructuredErrors(
+  private static ArrayList<StructuredError> createStructuredErrors(
           Set<ConstraintViolation<Object>> constraintViolations) {
 
     var constraintViolation = constraintViolations.iterator().next();
@@ -53,7 +52,7 @@ public class EntityValidator {
         HibernateConstraintViolation.class
     );
 
-    return constraintViolations.stream()
+    var structuredErrors =  constraintViolations.stream()
             .collect(groupingBy(ConstraintViolation::getPropertyPath))
             .entrySet().stream()
             .map(entry -> {
@@ -64,6 +63,7 @@ public class EntityValidator {
               return new StructuredError(entry.getKey().toString(),
                   propertyErrors,
                   hibernateConstraintViolation.getDynamicPayload(ArrayList.class));
-            }).collect(Collectors.toList());
+            }).toList();
+    return new ArrayList<>(structuredErrors);
   }
 }
